--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <a href="#">
+            <img src="assets/icons/Logo.svg" />
+        </a>
+        <ul>
+            <li><a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa"></a></li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas viagens</a></li>
+            <li><a href="#"><img src="assets/img/Profile.jpg" alt="imagem de perfil"></a></li>
+        </ul>
+    </nav>
+    <header>
 
+    </header>
 </body>
 </html>
