--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <title>Travelgram</title>
     
     <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/global.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="#">
-            <img src="assets/icons/Logo.svg" />
-        </a>
-        <ul>
-            <li><a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa"></a></li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#">Minhas viagens</a></li>
-            <li><a href="#"><img src="assets/img/Profile.jpg" alt="imagem de perfil"></a></li>
-        </ul>
-    </nav>
-    <header>
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#">
+                <img src="assets/icons/Logo.svg" />
+            </a>
+            <ul id="primary-menu">
+                <li><a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa"></a></li>
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#"><img src="assets/img/Profile.jpg" alt="imagem de perfil"></a></li>
+            </ul>
+        </nav>
+    </div>
+        <header>
 
     </header>
 </body>
