--- a/index.html
+++ b/index.html
@@ -24,9 +24,30 @@
                 <li><a href="#"><img src="assets/img/Profile.jpg" alt="imagem de perfil"></a></li>
             </ul>
         </nav>
-    </div>
+        
         <header>
-
-    </header>
+            <div class="container">
+                <div id="profile">
+                    <img src="assets/img/Profile.jpg" alt="">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+                    </div>
+                </div>
+                <ul id="info">
+                    <li>
+                        <img src="assets/icons/MapPin.svg" /><span>Sao Paulo, Brazil</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/AirplaneTilt.svg" /><span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/Image.svg" /><span>240 fotos</span>
+                    </li>
+                </ul>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
