--- a/index.html
+++ b/index.html
@@ -49,5 +49,19 @@
             </div>
         </header>
     </div>
+    <main class="container">
+        <img src="assets/img/Image 01.png" />
+        <img src="assets/img/Image 02.png" />
+        <img src="assets/img/Image 03.png" />
+        <img src="assets/img/Image 04.png" />
+        <img src="assets/img/Image 05.png" />
+        <img src="assets/img/Image 06.png" />
+        <img src="assets/img/Image 07.png" />
+        <img src="assets/img/Image 08.png" />
+        <img src="assets/img/Image 09.png" />
+        <img src="assets/img/Image 10.png" />
+        <img src="assets/img/Image 11.png" />
+        <img src="assets/img/Image 12.png" />
+    </main>
 </body>
 </html>
