--- a/index.html
+++ b/index.html
@@ -63,5 +63,10 @@
         <img src="assets/img/Image 11.png" />
         <img src="assets/img/Image 12.png" />
     </main>
+    <footer class="container">
+        <span>Travelgram &copy; 2024</span>
+        <span>termos de uso</span>
+        <span>Política de privacidade</span>
+    </footer>
 </body>
 </html>
